[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Main_Game/Level_01/Path01.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Main_Game/Level_01/Level_01.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Main_Game/Level_01/Path02.tscn" type="PackedScene" id=3]
[ext_resource path="res://Audio/Music/Flying Dragon.ogg" type="AudioStream" id=4]

[node name="Level_01" type="Node2D"]
script = ExtResource( 2 )

[node name="Path01_01" parent="." instance=ExtResource( 1 )]
position = Vector2( 96, 0 )

[node name="Path01_02" parent="." instance=ExtResource( 1 )]
position = Vector2( 224, 0 )

[node name="Path01_03" parent="." instance=ExtResource( 1 )]
position = Vector2( 352, 0 )

[node name="Path01_04" parent="." instance=ExtResource( 1 )]
position = Vector2( 480, 0 )

[node name="Path02_01" parent="." instance=ExtResource( 3 )]

[node name="Path02_02" parent="." instance=ExtResource( 3 )]

[node name="Path02_03" parent="." instance=ExtResource( 3 )]

[node name="Path02_04" parent="." instance=ExtResource( 3 )]

[node name="LevelMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
